some modification of previous commit

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="flex justify-between flex-col md:flex-row items-center pt-12 px-40 gap-4">
             <div>
                 <a href="">
-                    <h1 class="font-bold text-xl sm:text-2xl md:text-3xl lg:text-4xl lg:pl-16">
+                    <h1 class="font-bold text-xl w-36 md:w-fit sm:text-2xl md:text-3xl lg:text-4xl lg:pl-16">
                         G3 Architects
                     </h1>
                 </a>
@@ -39,11 +39,11 @@
                 "Brand New Group of Architects" is a cutting-edge architecture firm dedicated to innovative design and sustainable solutions. Our team of talented architects collaborates to create modern, functional spaces that inspire and endure. Whether it's residential, commercial, or public projects, we bring visionary ideas to life, shaping environments that reflect the future.
             </p>
             <a href="">
-                <button class="mt-8 bg-[#FF900E] px-3 py-2  rounded-md text-white hover:bg-slate-300 hover:text-cyan-950">Explore More</button>
+                <button class="mt-6 bg-[#FF900E] px-3 py-2  rounded-md text-white hover:bg-slate-300 hover:text-cyan-950">Explore More</button>
             </a>
         </div>
-        <div class="mt-10">
-            <img class="w-9/12 mx-auto" src="images/banner.png" alt="">
+        <div class="mt-8">
+            <img class="w-10/12 mx-auto" src="images/banner.png" alt="">
         </div>
     </header>
 </body>
