--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </ul>
         </div>
           <!-- banner section  -->
-          <div class=" text-center mt-20">
+        <div class=" text-center mt-20">
             <h1 class="font-bold text-4xl">Brand New <br> Group of Architects</h1>
             <p class="w-3/4 mx-auto text-xs md:w-3/6 mt-6">
                 "Brand New Group of Architects" is a cutting-edge architecture firm dedicated to innovative design and sustainable solutions. Our team of talented architects collaborates to create modern, functional spaces that inspire and endure. Whether it's residential, commercial, or public projects, we bring visionary ideas to life, shaping environments that reflect the future.
@@ -43,8 +43,50 @@
             </a>
         </div>
         <div class="mt-8">
-            <img class="w-10/12 mx-auto" src="images/banner.png" alt="">
+            <img class="w-9/12 mx-auto" src="images/banner.png" alt="">
         </div>
     </header>
+    <!-- first-section -->
+     <section class="mt-28 mx-auto">
+        <div class="flex flex-row justify-center gap-4 md:hidden">
+            <img class="w-40" src="images/team1.png" alt="">
+            <img class="w-40" src="images/team2.png" alt="">
+        </div>
+
+        <div class=" text-center md:hidden">
+            <h2 class="text-2xl"><span class="text-slate-500 font-semibold">Quick list</span>  <span class="font-bold">of Our</span>  <br> <span class="text-[#FF900E]">Features</span></h2>
+            <p class="w-3/4 mx-auto text-xs">
+                "Quickest List of Our Features" provides a swift, clear snapshot of our top offerings, making it easy to see what sets our architecture website apart.
+            </p>
+            <a href="">
+                <button class="mt-2 bg-[#FF900E] px-2 py-1  rounded-md text-white hover:bg-slate-300 hover:text-cyan-950">Explore More</button>
+            </a>
+        </div>
+        <div class="flex flex-row justify-center gap-4 mt-2 md:hidden">
+            <img class="w-40" src="images/team3.png" alt="">
+            <img class="w-40" src="images/team4.png" alt="">
+        </div>
+
+        <!-- hidden-part -->
+         <div class="flex gap-12 justify-center items-center mx-auto w-10/12">
+                <div class="hidden md:grid grid-cols-2 gap-6">
+                    <img class="w-auto" src="images/team1.png" alt="">
+                    <img class="w-auto" src="images/team2.png" alt="">
+                    <img class="w-auto" src="images/team3.png" alt="">
+                    <img class="w-auto" src="images/team4.png" alt="">
+                </div>
+
+                <div class="hidden text-left md:block w-4/12">
+                    <h2 class="text-4xl"><span class="text-slate-500 font-semibold">Quick list</span>  <span class="font-bold">of Our</span>  <br> <span class="text-[#FF900E]">Features</span></h2>
+                    <p class="text-xs mt-6 text-slate-600">
+                        "Quickest List of Our Features" offers a fast, easy-to-read overview of our standout offerings, helping you quickly understand what makes our architecture website unique. This section highlights the key features that set us apart, ensuring you can find exactly what you need with just a glance.
+                    </p>
+                    <a href="">
+                        <button class="mt-6 bg-[#FF900E] px-3 py-2  rounded-md text-white hover:bg-slate-300 hover:text-cyan-950">Explore More</button>
+                    </a>
+                </div>
+         </div>
+        
+     </section>
 </body>
 </html>
