--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             </ul>
         </div>
           <!-- banner section  -->
-        <div class=" text-center mt-20">
-            <h1 class="font-bold text-4xl">Brand New <br> Group of Architects</h1>
-            <p class="w-3/4 mx-auto text-xs md:w-3/6 mt-6">
+        <div class=" text-center mt-28">
+            <h1 class="font-bold text-4xl lg:text-5xl">Brand New <br> Group of Architects</h1>
+            <p class="w-3/4 mx-auto text-xs text-slate-700 lg:text-sm md:w-3/6 lg:w-5/12 mt-6">
                 "Brand New Group of Architects" is a cutting-edge architecture firm dedicated to innovative design and sustainable solutions. Our team of talented architects collaborates to create modern, functional spaces that inspire and endure. Whether it's residential, commercial, or public projects, we bring visionary ideas to life, shaping environments that reflect the future.
             </p>
             <a href="">
-                <button class="mt-6 bg-[#FF900E] px-3 py-2  rounded-md text-white hover:bg-slate-300 hover:text-cyan-950">Explore More</button>
+                <button class="mt-6 bg-[#FF900E] px-3 py-2 lg:px-4 lg:py-3 rounded-md text-white hover:bg-slate-300 hover:text-cyan-950">Explore More</button>
             </a>
         </div>
         <div class="mt-8">
@@ -68,7 +68,7 @@
         </div>
 
         <!-- hidden-part -->
-         <div class="flex gap-12 justify-center items-center mx-auto w-10/12">
+         <div class="flex gap-14 justify-center items-center mx-auto w-10/12">
                 <div class="hidden md:grid grid-cols-2 gap-6">
                     <img class="w-auto" src="images/team1.png" alt="">
                     <img class="w-auto" src="images/team2.png" alt="">
@@ -77,12 +77,12 @@
                 </div>
 
                 <div class="hidden text-left md:block w-4/12">
-                    <h2 class="text-4xl"><span class="text-slate-500 font-semibold">Quick list</span>  <span class="font-bold">of Our</span>  <br> <span class="text-[#FF900E]">Features</span></h2>
-                    <p class="text-xs mt-6 text-slate-600">
+                    <h2 class="text-4xl lg:text-5xl"><span class="text-slate-500 font-semibold">Quick list</span>  <span class="font-bold">of Our</span>  <br> <span class="text-[#FF900E]">Features</span></h2>
+                    <p class="text-xs lg:text-sm mt-6 text-slate-600">
                         "Quickest List of Our Features" offers a fast, easy-to-read overview of our standout offerings, helping you quickly understand what makes our architecture website unique. This section highlights the key features that set us apart, ensuring you can find exactly what you need with just a glance.
                     </p>
                     <a href="">
-                        <button class="mt-6 bg-[#FF900E] px-3 py-2  rounded-md text-white hover:bg-slate-300 hover:text-cyan-950">Explore More</button>
+                        <button class="mt-6 bg-[#FF900E] px-3 py-2 lg:px-4 lg:py-4 rounded-md text-white hover:bg-slate-300 hover:text-cyan-950">Explore More</button>
                     </a>
                 </div>
          </div>
