Third-section completed

--- a/index.html
+++ b/index.html
@@ -140,5 +140,34 @@
             </div>
         </div>
       </section>
+      <!-- third-section -->
+       <section class="w-11/12 mx-auto mt-14 xl:mt-20">
+            <div class="pl-4 xl:pl-28">
+                <h2 class="font-bold text-4xl">Some Facts</h2>
+                <p class="mt-4 text-sm text-slate-700 line-clamp-4 md:w-11/12 lg:w-10/12 xl:w-11/12">Here are some key facts about our work: from award-winning projects to innovative design solutions, our achievements speak for themselves. Explore the milestones that define our success.</p>
+            </div>
+            <div class="grid grid-cols-2 gap-4 mt-8 xl:mt-16 w-11/12 mx-auto md:ml-28 lg:ml-10 xl:ml-28 lg:grid-cols-4 lg:gap-0">
+                <div class="border-solid border-2 border-[#FF900E] rounded-md p-4 h-40 w-40 lg:h-48 lg:w-48 lg:gap-2 flex flex-col items-center">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h1 class="text-4xl font-bold">54</h1>
+                    <p class="text-sm lg:text-lg lg:font-bold text-slate-500 font-semibold">Awards Winnings</p>
+                </div>
+                <div class="border-solid border-2 border-[#FF900E] rounded-md p-4 h-40 w-40 lg:h-48 lg:w-48 lg:gap-2 flex flex-col items-center">
+                    <img src="images/icons/projects.png" alt="">
+                    <h1 class="text-4xl font-bold">1458</h1>
+                    <p class="text-sm lg:text-lg lg:font-bold text-slate-500 font-semibold">Project Finished</p>
+                </div>
+                <div class="border-solid border-2 border-[#FF900E] rounded-md p-4 h-40 w-40 lg:h-48 lg:w-48 lg:gap-2 flex flex-col items-center">
+                    <img src="images/icons/customers.png" alt="">
+                    <h1 class="text-4xl font-bold">598</h1>
+                    <p class="text-sm lg:text-lg lg:font-bold text-slate-500 font-semibold"> Clients Worked</p>
+                </div>
+                <div class="border-solid border-2 border-[#FF900E] rounded-md p-4 h-40 w-40 lg:h-48 lg:w-48 lg:gap-2 flex flex-col items-center">
+                    <img src="images/icons/email.png" alt="">
+                    <h1 class="text-4xl font-bold">22578</h1>
+                    <p class="text-sm lg:text-lg lg:font-bold text-slate-500 font-semibold">Email Send </p>
+                </div>
+            </div>
+       </section>
 </body>
 </html>
