--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <!-- third-section -->
        <section class="w-11/12 mx-auto mt-14 xl:mt-28">
             <div class="pl-4 xl:pl-28 lg:flex lg:gap-10 lg:items-center lg:mb-20">
-                <h2 class="font-bold text-4xl">Some Facts</h2>
+                <h2 class="font-bold text-4xl lg:min-w-fit">Some Facts</h2>
                 <div class="hidden lg:block h-12 w-1 bg-[#FF900E]"></div>
                 <p class="mt-4 text-sm text-slate-700 line-clamp-4 md:w-11/12 lg:w-10/12 xl:w-9/12">Here are some key facts about our work: from award-winning projects to innovative design solutions, our achievements speak for themselves. Explore the milestones that define our success.</p>
             </div>
